--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 		<div ng-if="!swowList" ng-model="userData" all-users-info>
 			
 		</div>
-
+		    <ul class="nav navbar-nav">
+    </ul>
+		<div ui-view></div>
 	</div>
 </body>
 </html>
