--- a/index.html
+++ b/index.html
@@ -2,37 +2,42 @@
 <html ng-app="app">
 <head>
 <meta charset="utf-8">
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-
 <link rel="stylesheet" href="css/style.css">
-<script src="controllers/list.js"></script>
-<script src="service/seviceLocalStorage.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 
 <!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
 <!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script> 
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+
 </head>
-<body> 
-	<div class="wrap" ng-controller="Controller">
-		<div ng-if="swowList" users-info>
-			
+
+
+<body>
+	<div ui-view></div>
+</body>
+<script src="app.js"></script>
+<script src="controllers/appCtrl.js"></script>
+<script src="controllers/usersCtrl.js"></script>
+<script src="controllers/postsCtrl.js"></script>
+<script src="controllers/singlePostCtrl.js"></script>
+<script src="controllers/albumCtrl.js"></script>
+<script src="controllers/photosCtrl.js"></script>
+<script src="controllers/commentsCtrl.js"></script>
+<script src="service/appServices.js"></script>
+</html>
+	<!-- <div class="wrap" ng-controller="Controller"> -->
+<!-- 		<div ng-if="swowList" users-info>
+
 		</div>
 		<div ng-if="!swowList" ng-model="userData" all-users-info>
-			
-		</div>
-		    <ul class="nav navbar-nav">
-    </ul>
-		<div ui-view></div>
-	</div>
-</body>
-</html>
+
+		</div> -->
+<!-- 		    <ul class="nav navbar-nav"> -->
 
 
 <!-- 	<ul class='users' ng-repeat="el in jsonData">
@@ -118,6 +123,3 @@
 			</ul>
 		</li>
 	</ul> -->
-
-
-
