--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <link rel="stylesheet" href="css/style.css">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+<link rel='stylesheet' href='build/css/loading-bar.min.css' type='text/css' media='all' />
 
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-
 <!-- Optional theme -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
 
@@ -18,7 +18,9 @@
 
 
 <body>
-
+	<div ng-controller="loaderCtrl">
+		<loading></loading>
+	</div>
 	<div ui-view></div>
 </body>
 <script src="app.js"></script>
@@ -30,4 +32,10 @@
 <script src="controllers/photosCtrl.js"></script>
 <script src="controllers/commentsCtrl.js"></script>
 <script src="service/appServices.js"></script>
+<script src="controllers/loaderCtrl.js"></script>
+<script src="directive/loading.js"></script>
+<script type='text/javascript' src='build/js/loading-bar.min.js'></script>
+<!-- <script type="text/javascript" src="http://fgnass.github.io/spin.js/spin.min.js"></script>
+<script type="text/javascript" src="angular-spinner.min.js"></script>
+<script type="text/javascript" src="directive/loading.js"></script> -->
 </html>
