--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 	
 	<div class="wrapper">
 		<slick infinite=true slides-to-show=3 slides-to-scroll=3 autoplay=true> 
-			<div ><img src="img/img1.jpg" alt=""></div>
-			<div ><img src="img/img2.jpg" alt=""></div>
-			<div ><img src="img/img3.jpg" alt=""></div>
-			<div ><img src="img/img4.jpg" alt=""></div>
-			<div ><img src="img/img1.jpg" alt=""></div>
-			<div ><img src="img/img2.jpg" alt=""></div>
+			<div class="fl" ><img src="img/img1.jpg" alt=""></div>
+			<div class="fl"><img src="img/img2.jpg" alt=""></div>
+			<div class="fl"><img src="img/img3.jpg" alt=""></div>
+			<div class="fl"><img src="img/img4.jpg" alt=""></div>
+			<div class="fl"><img src="img/img1.jpg" alt=""></div>
+			<div class="fl"><img src="img/img2.jpg" alt=""></div>
 		</slick>
 	</div>
 	
@@ -37,9 +37,9 @@
 			<li><a ui-sref="home()">Home</a></li>
 			<li><a ui-sref="allPosts()">All Posts</a></li>
 			<li><a ui-sref="allPhotos()">All Photos</a></li>
-			<li><a ui-sref="testGetPhotos()">test(GetPhotos)</a></li>
-			<!-- <li><a ui-sref="POSTRequest()">Book(Request)</a></li> -->
-		<!-- 	<li><a ui-sref="POSTposts()">POST(Request)</a></li> -->
+			<li><a ui-sref="testGetPhotos()">Photo</a></li>
+		<!-- <li><a ui-sref="POSTRequest()">Book(Request)</a></li> -->
+		<!-- <li><a ui-sref="POSTposts()">POST(Request)</a></li> -->
 		</ul>
 	</nav>
 	<loading></loading>
