--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
 <body>
 	
 	<div class="wrapper">
-		<slick infinite=true slides-to-show=3 slides-to-scroll=3 autoplay=true> 
-			<div class="fl" ><img src="img/img1.jpg" alt=""></div>
+		<slick infinite=true slides-to-show=6 slides-to-scroll=1 autoplay=true> 
+			<div class="fl"><img src="img/img1.jpg" alt=""></div>
 			<div class="fl"><img src="img/img2.jpg" alt=""></div>
 			<div class="fl"><img src="img/img3.jpg" alt=""></div>
+			<div class="fl"><img src="img/img4.jpg" alt=""></div>
+			<div class="fl"><img src="img/img1.jpg" alt=""></div>
+			<div class="fl"><img src="img/img2.jpg" alt=""></div>
 			<div class="fl"><img src="img/img4.jpg" alt=""></div>
 			<div class="fl"><img src="img/img1.jpg" alt=""></div>
 			<div class="fl"><img src="img/img2.jpg" alt=""></div>
@@ -38,6 +41,8 @@
 			<li><a ui-sref="allPosts()">All Posts</a></li>
 			<li><a ui-sref="allPhotos()">All Photos</a></li>
 			<li><a ui-sref="testGetPhotos()">Photo</a></li>
+			<li><a ui-sref="slide()">slide</a></li>
+			<li><a ui-sref="convertCurrency()">Currency</a></li>
 		<!-- <li><a ui-sref="POSTRequest()">Book(Request)</a></li> -->
 		<!-- <li><a ui-sref="POSTposts()">POST(Request)</a></li> -->
 		</ul>
@@ -55,8 +60,9 @@
 <script src="controllers/allPhotosCtrl.js"></script>
 <script src="controllers/commentsCtrl.js"></script>
 <script src="controllers/testGetPhotosCtrl.js"></script>
-<script src="controllers/POSTRequestCtrl.js"></script>
 <script src="controllers/POSTPostsCtrl.js"></script>
+<script src="controllers/photosSliderCtrl.js"></script>
+<script src="controllers/convertCurrencyCtrl.js"></script>
 
 <script src="service/POSTPostsServices.js"></script>
 <script src="service/usersServices.js"></script>
@@ -66,7 +72,8 @@
 <script src="service/allPhotosServices.js"></script>
 <script src="service/commentsServices.js"></script>
 <script src="service/testGetPhotosServices.js"></script>
-<script src="service/POSTRequestServices.js"></script>
+<script src="service/getPhotoSliderServices.js"></script>
+<script src="service/convertCurrencyServices.js"></script>
 
 <script src="service/loadingService.js"></script>
 
